Atualiza meu projeto com nova versão

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="app">
-    <a id="botao" href="/ProjetoAmor/www/index1.html">💖 Click</a>
+    <a id="botao" href="/index1.html">💖 Click</a>
   </div>
 
   <script src="cordova.js"></script>
