Atualiza meu projeto com nova versão

--- a/index.html
+++ b/index.html
@@ -1,17 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Para Meu Amor 💖</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Eu te amo</title>
+  <link rel="stylesheet" href="/css/style1.css">
 </head>
+
 <body>
   <div class="app">
-    <a id="botao" href="/index1.html">💖 Click</a>
+    <h1>Para o meu amor</h1>
+    <iframe class="musica" style="border-radius:12px"
+      src="https://open.spotify.com/embed/track/2o2xhyri4aJUtgMGkf5P0J?utm_source=generator"
+      width="300" height="80" frameBorder="0" allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+    <swiper-container class="mySwiper" pagination="false" Autoplay="true">
+      <swiper-slide><img class="amor" src="/Eu e ela/303c4230c6cb99f2410be0087d882c44_0.jpeg" alt=""></swiper-slide>
+    </swiper-container>
+
+    <p id="mensagem"></p>
+    <div class="texto">
+      <h1 class="titu">Porque Eu te amo?</h1>
+      <p>Porque você foi aquela que vi atraves do seu corpo e o do seu sorriso, eu vi pelos seus olhos que você era
+        pura, pureza não tem haver com corpo mas com a alma...</p>
+    </div>
+
+    <swiper-container class="mySwiper" pagination="false" Autoplay="true">
+      <swiper-slide><img src="/Eu e ela/a397ee503770b6adb08b8b6247b17a6d_0.jpeg" alt="" class="amor"></swiper-slide>
+    </swiper-container>
+
+    <p class="poesia">"feitos um pro outro, feitos pra durar, uma luz que não produz sombra"</p>
+
+    <div class="texto">
+      <h1 class="titu">Você me faz feliz?</h1>
+      <p>Sinceramente minha vida sem você seria horrivel...</p>
+    </div>
+
+    <swiper-container class="mySwiper" pagination="false" Autoplay="true">
+      <swiper-slide><img src="/Eu e ela/IMG_20250408_121101.jpg" alt="" class="amor"></swiper-slide>
+    </swiper-container>
+
+    <p class="poesia">"tudo que é amor, parece com você"</p>
+
+    <div class="texto">
+      <h1 class="titu">Oque mais admiro em você?</h1>
+      <p>Tudo que olho pra você me admira...</p>
+    </div>
+
+    <swiper-container class="mySwiper" pagination="false" Autoplay="true">
+      <swiper-slide><img class="amor" src="/Eu e ela/fdc9d10573295a137fcd84e16008e05d_1731938742621_0.webp.webp"
+          alt=""></swiper-slide>
+    </swiper-container>
+
+    <p class="poesia">"há de surgir uma estrela no céu cada vez que você sorri"</p>
+
+    <div class="texto">
+      <h1 class="titu">Oque você mudou em mim?</h1>
+      <p>Você me mudou por completo...</p>
+    </div>
+
+    <swiper-container class="mySwiper" pagination="false" Autoplay="true">
+      <swiper-slide><img class="amor" src="/Eu e ela/IMG_20241105_161949.jpg" alt=""></swiper-slide>
+    </swiper-container>
+
+    <div class="texto">
+      <h1 class="titu">Oque sinto longe de você?</h1>
+      <p>Longe de você sinto que um pedaço de mim esta faltando...</p>
+    </div>
+
+    <swiper-container class="mySwiper" pagination="false" Autoplay="true">
+      <swiper-slide><img class="amor" src="/Eu e ela/405c8a39c0efeec07875b10b8818d19f_0.jpeg" alt=""></swiper-slide>
+    </swiper-container>
+
+    <p class="poesia">“Estarei feliz, aonde for, se você estiver comigo.”</p>
+
+    <div class="texto">
+      <h1 class="titu">Porque te escolhi?</h1>
+      <p>Te escolhi porque foste a primeira que eu senti uma conexão...</p>
+    </div>
+
+    <swiper-container class="mySwiper" pagination="false" Autoplay="true">
+      <swiper-slide><img class="amor" src="/Eu e ela/480747473_1798995597618577_7381911804102445471_n.jfif"
+          alt=""></swiper-slide>
+    </swiper-container>
+
+    <p class="poesia">"Eu e você somos coisa de alma"</p>
+
+    <div class="texto">
+      <h1 class="titu">O que eu desejo pra nós dois?</h1>
+      <p>Você eu quero casar, quero que seja a mãe dos meus filhos...</p>
+    </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br>
   </div>
 
-  <script src="cordova.js"></script>
- 
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+  <script src="/js/index.js"></script>
 </body>
+
 </html>
